# tsmc2025

./: .gitignore  README.md  README.md.bak  alembic.ini  app.py  example.env  pyproject.toml  test.py
.devcontainer/: devcontainer.json  postscript.sh
.github/workflows/: conventional.yml  docker.yml  ruff.yml
alembic/: FIN_Data.xlsx  TRANSCRIPT_Data.xlsx
alembic/versions/: 90aac6aea9c0_add_chatroom_and_message.py
data/: .gitignore  ExchangeRate.csv  FIN_Data.csv  TRANSCRIPT_Data.csv  init.sh  init.sql
data/Transcript File/: Advanced Micro Devices, Inc. (NASDAQ AMD)  Q3 2021 Earnings Conference Call.txt  Advanced Micro Devices, Inc. (NASDAQ AMD) Q1 2020 Earnings Conference Call.txt  Advanced Micro Devices, Inc. (NASDAQ AMD) Q1 2021 Results Conference Call.txt  Advanced Micro Devices, Inc. (NASDAQ AMD) Q1 2022 Earnings Conference Call.txt  Advanced Micro Devices, Inc. (NASDAQ AMD) Q1 2023 Earnings Conference Call.txt  Advanced Micro Devices, Inc. (NASDAQ AMD) Q1 2024 Earnings Conference Call.txt  Advanced Micro Devices, Inc. (NASDAQ AMD) Q2 2020 Earnings Conference Call.txt  Advanced Micro Devices, Inc. (NASDAQ AMD) Q2 2021 Earnings Conference Call.txt  Advanced Micro Devices, Inc. (NASDAQ AMD) Q2 2022 Earnings Conference Call.txt  Advanced Micro Devices, Inc. (NASDAQ AMD) Q2 2023 Earnings Conference Call.txt  Advanced Micro Devices, Inc. (NASDAQ AMD) Q2 2024 Earnings Conference Call.txt  Alphabet Inc. (NASDAQ GOOG) Q3 2023 .txt  (+455 more)
docker/: Dockerfile  manifest.yml
src/: account.py  bot.py  config.py  datasource.py  handler.py  ping.py  sql.py  state.py
(+18 files in other folders)
