[project]
name = "tsmc2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "discord-py>=2.4.0",
    "duckdb>=1.2.0",
    "google-cloud-aiplatform>=1.79.0",
    "google-genai>=1.2.0",
    "google-generativeai>=0.8.4",
    "matplotlib>=3.10.0",
    "sqlalchemy>=2.0.38",
    "sqlglot[rs]>=26.6.0",
]
